--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,6 +1,6 @@
 {
   "id": "nu.ahlner.p1ib",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "brandColor": "#0d47a2",
@@ -29,5 +29,6 @@
   "bugs": {
     "url": "https://github.com/whyz/homey-p1ib/issues"
   },
-  "source": "https://github.com/whyz/homey-p1ib"
+  "source": "https://github.com/whyz/homey-p1ib",
+  "homepage": "https://github.com/remne/p1ib"
 }
