--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "nu.ahlner.p1ib",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "brandColor": "#0d47a2",
@@ -31,6 +31,7 @@
     "url": "https://github.com/whyz/homey-p1ib/issues"
   },
   "source": "https://github.com/whyz/homey-p1ib",
+  "homepage": "https://github.com/remne/p1ib",
   "drivers": [
     {
       "name": {
