--- a/app.json
+++ b/app.json
@@ -42,7 +42,7 @@
         "measure_current.l1",
         "measure_current.l2",
         "measure_current.l3",
-        "meter_power",
+        "meter_power.import",
         "meter_power.export",
         "measure_power",
         "measure_power.export",
